@@ -27,7 +27,6 @@ import org.xwiki.notifications.notifiers.email.NotificationEmailGroupingStrategy
 import javax.inject.Named;
 import javax.inject.Singleton;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * This component offers a strategy for sending one email per composite event to notify to the user.
@@ -48,6 +47,6 @@ public class OneMailPerCompositeEmailGroupingStrategy implements NotificationEma
     public List<List<CompositeEvent>> groupEventsPerMail(List<CompositeEvent> compositeEvents)
             throws NotificationException
     {
-        return compositeEvents.stream().map(List::of).collect(Collectors.toList());
+        return compositeEvents.stream().map(List::of).toList();
     }
 }
